[project]
name = "prefect-modal-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "modal>=1.0.5",
    "prefect==3.2.7",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]
